--- a/docs/bundled.rhtml
+++ b/docs/bundled.rhtml
@@ -13,11 +13,11 @@
 		<style>
 			<%= @bundle_css %>
 		</style>
-
-		<script>
-			<%= @bundle_js %>
-		</script>
 	</head>
 
 	<body class="bg-gray-100 relative"></body>
+
+	<script type="text/javascript">
+		<%= @bundle_js %>
+	</script>
 </html>
